add QR schema, modified schemas in general, updated the endpoint to create new establishments and qrs, updated the tests
