# src/static/swagger.json
@@ -245,7 +245,7 @@
             "type": "string",
             "example": "CABA"
           },
-          "province": {
+          "state": {
             "type": "string",
             "example": "CABA"
           },
@@ -291,7 +291,7 @@
           "email",
           "address",
           "city",
-          "province",
+          "state",
           "zip",
           "country",
           "QRs"
@@ -317,7 +317,7 @@
             "type": "string",
             "example": "CABA"
           },
-          "province": {
+          "state": {
             "type": "string",
             "example": "CABA"
           },
@@ -374,7 +374,7 @@
             "type": "string",
             "example": "CABA"
           },
-          "province": {
+          "state": {
             "type": "string",
             "example": "CABA"
           },
